Changed frontend and created all password validation.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    @font-face {
+        font-family: 'Video-Light';
+        src: url('../fonts/Video-Light.otf') format("opentype");
+        font-weight: 300;
+    }
+}
